# hostpitalinator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  build.ts  components.json  docker-compose.yml  eslint.config.js  index.html  notes.md  package.json  tsconfig.app.json  tsconfig.node.json
api/: Cargo.toml
api/migrations/: 001_initial_schema.sql  002_auth_and_document_storage.sql  003_beds_and_patient_assignments.sql  004_structured_lab_panels.sql  005_services_and_service_scopes.sql  006_remove_patient_ipp.sql  007_patient_administrative_details.sql  008_patient_apartment_number.sql  009_medicines_reference.sql  011_patient_measurements.sql  012_patient_current_visit.sql  013_bed_rooms.sql  014_rooms_table.sql  015_evolution_note_author_role.sql  016_entrance_exam.sql  017_entrance_exam_history_index.sql  018_one_entrance_exam_per_patient.sql  019_vital_glucose_oxygen.sql  020_patient_contact_persons.sql  021_doctors_reference_and_patient_followups.sql  022_entrance_exam_allergies.sql  023_patient_admission_reason.sql  024_entrance_exam_input_fields.sql  025_split_medical_act_antecedents.sql  026_medical_document_notes.sql  027_entrance_exam_admission_reason.sql  028_performance_indexes.sql  029_numeric_account_ids.sql  030_numeric_patient_ids.sql  031_lab_panel_notes.sql
api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  realtime.rs  state.rs  validation.rs
api/src/modules/: auth.rs  mod.rs  rooms.rs  services.rs
api/src/modules/accounts/: mod.rs
api/src/modules/beds/: mod.rs
api/tests/: auth_and_domain_flows.rs
docs/: PROJECT_SPEC.md
(+109 files in other folders)
