[package]
name = "hospitalinator-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hospitalinator_api"
path = "src/lib.rs"

[[bin]]
name = "hospitalinator-api"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
